# rag-basic-to-agentic

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  sitecustomize.py  tasks.py
.github/workflows/: ci.yml
src/ragkit/: config.py  utils.py
src/ragkit/scripts/: 01_basic_rag.py  02_query_transformations.py  03_routing.py  04_indexing.py  05_retrieval.py  06_self_reflection.py  07_agentic_rag.py  08_corrective_rag.py  09_graph_rag.py
tests/: test_config.py  test_utils.py
tests/test_scripts/: test_01_basic_rag.py
