[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragkit"
version = "0.1.0"
description = "Progressive RAG pipeline: from basic to agentic, powered by free-tier APIs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Suhaila Elbehairy", email = "s-suhaila.ali@zewailcity.edu.eg"}]
keywords = ["rag", "langchain", "groq", "huggingface", "agentic"]

dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-chroma>=0.1.0",
    "langchain-classic>=0.1.0",
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "huggingface-hub>=0.25.0",
    "flashrank>=0.2.0",
    "duckduckgo-search>=6.0.0",
    "langchain-experimental>=0.3.0",
    "tiktoken>=0.7.0",
    "pypdf>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "arxiv>=2.1.0",
    "wikipedia>=1.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "ipython>=8.20.0",
]

[project.scripts]
ragkit = "ragkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501", "N999"]  

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true